NetBSD Problem Report #50528

From www@NetBSD.org  Fri Dec 11 09:51:05 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 963D9A6661
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 11 Dec 2015 09:51:05 +0000 (UTC)
Message-Id: <20151211095104.C318FA667E@mollari.NetBSD.org>
Date: Fri, 11 Dec 2015 09:51:04 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/netinet/sctp_indata.c:3759: sizeof on sizeof ?
X-Send-Pr-Version: www-1.0

>Number:         50528
>Category:       kern
>Synopsis:       src/sys/netinet/sctp_indata.c:3759: sizeof on sizeof ?
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Dec 11 09:55:01 +0000 2015
>Closed-Date:    Sun Dec 13 20:27:51 +0000 2015
>Last-Modified:  Sun Dec 13 20:27:51 +0000 2015
>Originator:     David Binderman
>Release:        cvs dated 20151210
>Organization:
>Environment:
>Description:
[src/sys/netinet/sctp_indata.c:3759]: (warning) Calling 'sizeof' on 'sizeof'.

Source code is

  if (((num_seg * sizeof (sizeof(struct sctp_gap_ack_block))) + sizeof(struct sctp_sack_chunk)) > sack_length) {

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50528 CVS commit: src/sys/netinet
Date: Sun, 13 Dec 2015 13:53:57 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Sun Dec 13 18:53:57 UTC 2015

 Modified Files:
 	src/sys/netinet: sctp_indata.c

 Log Message:
 PR/50528: David Binderman: remove sizeof(sizeof(x))


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 src/sys/netinet/sctp_indata.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sun, 13 Dec 2015 20:27:51 +0000
State-Changed-Why:
christos fixed it.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.