PR/50528: David Binderman: remove sizeof(sizeof(x))